Отчёты по поручениям и согласованиям - изначальная сортировка по алфавиту. Отчёты "Продуктивность по Поручениям" поправлен числовой формат оси значений. [ALF-1524] "Если нет данных, то дата на оси времени 01.01.1970": вариант решения (в комментах)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4046 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/repo/src/main/config/reportdefinitions/deploy/jasper/exec-prod-by-orgunit/exec-prod-by-orgunit.jrxml
+++ b/lecm-errands/repo/src/main/config/reportdefinitions/deploy/jasper/exec-prod-by-orgunit/exec-prod-by-orgunit.jrxml
@@ -137,7 +137,7 @@
 					</timeAxisFormat>
 					<valueAxisLabelExpression><![CDATA["Ср время исполнения поручений, ч"]]></valueAxisLabelExpression>
 					<valueAxisFormat>
-						<axisFormat/>
+						<axisFormat tickLabelMask="#,##0.00"/>
 					</valueAxisFormat>
 				</timeSeriesPlot>
 			</timeSeriesChart>
