[ALF-1545] fix опечатки "Реквизиты конТрагента"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4176 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/contract-dossier-byid/contract-dossier-byid.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/contract-dossier-byid/contract-dossier-byid.jrxml
@@ -302,7 +302,7 @@
 					<textElement>
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
-					<text><![CDATA[Реквизиты конрагента:]]></text>
+					<text><![CDATA[Реквизиты контрагента:]]></text>
 				</staticText>
 			</frame>
 			<frame>
