OPG-114 : Поправить карточку бизнес-роли + аналогичный багфикс везде
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4483 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/components/document-metadata-form.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-metadata-form.css
@@ -6,7 +6,8 @@
     width: 100%;
     margin-left: 0;
 }
-.metadata-form .set .viewmode-field .viewmode-value > .association-auto-complete-selected-item  {
+.metadata-form .set .viewmode-field .viewmode-value > .association-auto-complete-selected-item,
+.metadata-form .set .viewmode-field .viewmode-value > .association-auto-complete-selected-item-even {
     display: inline-block;
     width: 100%;
 }
