--- a/lecm-documents/share/src/main/webapp/css/components/document-metadata.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-metadata.css
@@ -12,10 +12,14 @@
     margin: 0;
 }
 
-.widget-bordered-panel .association-auto-complete-selected-item {
+.widget-bordered-panel .association-auto-complete-selected-item,
+.widget-bordered-panel .association-auto-complete-selected-item-even {
     display:inline;
 }
 
-.widget-bordered-panel div.association-auto-complete-selected-item > span > a, div.association-auto-complete-selected-item-even > span > a, div.association-auto-complete-selected-item > span.not-person, div.association-auto-complete-selected-item-even > span.not-person {
+.widget-bordered-panel div.association-auto-complete-selected-item > span > a,
+div.association-auto-complete-selected-item-even > span > a,
+div.association-auto-complete-selected-item > span.not-person,
+div.association-auto-complete-selected-item-even > span.not-person {
     overflow-x: inherit;
 }
