Дерево поручений документа - подправлено построение отчета, если выбирать документ
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4705 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/repo/src/main/config/reportdefinitions/deploy/jasper/exec-doc-tree/exec-doc-tree.jrxml
+++ b/lecm-errands/repo/src/main/config/reportdefinitions/deploy/jasper/exec-doc-tree/exec-doc-tree.jrxml
@@ -29,7 +29,7 @@
 
 	<queryString> <![CDATA[]]> </queryString>
 
-	<field name="Col_Param_Documents" class="java.lang.String">
+	<field name="Col_baseDocs" class="java.lang.String">
 		<fieldDescription><![CDATA[Выбранные документы]]></fieldDescription>
 	</field>
 
