рефакторинг модуля отчетная деятельность - провайдеры для отчетов по поручения вынесены в модуль поручения
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4929 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/repo/src/main/config/reportdefinitions/deploy/jasper/exec-prod-by-orgunit/exec-prod-by-orgunit.jrxml
+++ b/lecm-errands/repo/src/main/config/reportdefinitions/deploy/jasper/exec-prod-by-orgunit/exec-prod-by-orgunit.jrxml
@@ -15,7 +15,7 @@
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="34"/>
-	<property name="dataSource" value="ru.it.lecm.reports.generators.errands.ErrandsProductionsGraphDSProvider"/>
+	<property name="dataSource" value="ru.it.lecm.errands.reports.ErrandsProductionsGraphDSProvider"/>
 	<style name="styleOdd" mode="Opaque" backcolor="#FFFFFF">
 		<conditionalStyle>
 			<conditionExpression><![CDATA[$V{REPORT_COUNT}%2 == 0]]></conditionExpression>
