--- a/lecm-errands/repo/src/main/config/reportdefinitions/deploy/jasper/exec-discipline-by-creator/exec-discipline-by-creator.jrxml
+++ b/lecm-errands/repo/src/main/config/reportdefinitions/deploy/jasper/exec-discipline-by-creator/exec-discipline-by-creator.jrxml
@@ -14,7 +14,7 @@
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<property name="dataSource" value="ru.it.lecm.reports.generators.errands.ErrandsDisciplineDSProvider"/>
+	<property name="dataSource" value="ru.it.lecm.errands.reports.ErrandsDisciplineDSProvider"/>
 	<style name="styleOdd" mode="Opaque" backcolor="#FFFFFF">
 		<conditionalStyle>
 			<conditionExpression><![CDATA[$V{REPORT_COUNT}%2 == 0]]></conditionExpression>
