Ссылка на вложение
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4931 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/dnd-uploader-control.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/dnd-uploader-control.css
@@ -9,7 +9,7 @@
 .dnd-uploader ul.attachments-list li img {
     margin: 0 5px;
 }
-.dnd-uploader ul.attachments-list li > div {
+.dnd-uploader ul.attachments-list li div {
     width: 200px;
     height: 20px;
     display: inline-block;
