рефакторинг модуля отчетная деятельность - провайдеры для отчетов по договорам вынесены в модуль договора
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4934 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/docflow-counters/docflow-counters.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/docflow-counters/docflow-counters.jrxml
@@ -3,7 +3,7 @@
 	<property name="ireport.zoom" value="1.9487171000000025"/>
 	<property name="ireport.x" value="9"/>
 	<property name="ireport.y" value="0"/>
-	<property name="dataSource" value="ru.it.lecm.reports.jasper.DSProviderDocflowStatusCounters"/>
+	<property name="dataSource" value="ru.it.lecm.contracts.reports.DSProviderDocflowStatusCounters"/>
 	<style name="styleOdd" mode="Opaque" backcolor="#F4F5F5">
 		<conditionalStyle>
 			<conditionExpression><![CDATA[($V{REPORT_COUNT}%2 == 0) && false]]></conditionExpression>
