--- a/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/approval-list/approval-list.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/approval-list/approval-list.jrxml
@@ -3,7 +3,7 @@
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<property name="dataSource" value="ru.it.lecm.reports.jasper.DSProviderApprovalById"/>
+	<property name="dataSource" value="ru.it.lecm.contracts.reports.DSProviderApprovalById"/>
 	<style name="styleOdd" mode="Opaque" backcolor="#F4F5F5">
 		<conditionalStyle>
 			<conditionExpression><![CDATA[($V{REPORT_COUNT}%2 == 0) && false]]></conditionExpression>
