Uploader control добавление новой версии
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4936 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/dnd-uploader-control.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/dnd-uploader-control.css
@@ -17,7 +17,8 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 }
-.dnd-uploader ul.attachments-list li img.remove-icon {
+.dnd-uploader ul.attachments-list li img.remove-icon,
+.dnd-uploader ul.attachments-list li img.newVersion-icon {
     margin-right: 0;
     cursor: pointer;
 }
