[+] Добавлен контрол datagrid-association-control.ftl для работы с таблицами.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4991 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/datagrid.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/datagrid.css
@@ -59,3 +59,11 @@
 {
     display: block;
 }
+
+.datagrid .expandRow a {
+    background-image: url("/share/res/images/lecm-base/components/triangle_down.png");
+}
+
+.datagrid .expanded .expandRow a {
+    background-image: url("/share/res/images/lecm-base/components/triangle_up.png");
+}
