[~] форматирование и чистка  кода в Сервисе Отчетность [~]измения в Отчетах для ДОГОВОРОВ - они будут переписаны под имеющийся механизм построениря отчетов. ПРИМЕЧАНИЕ: непеределанные отчеты пока что пропадут из списка достпуных
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5008 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/contracts-list/contracts-list.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/contracts-list/contracts-list.jrxml
@@ -67,20 +67,8 @@
 	<field name="col_DateEnd" class="java.util.Date">
 		<fieldDescription><![CDATA[Дата окончания действия договора]]></fieldDescription>
 	</field>
-	<field name="col_Creator" class="java.lang.String">
-		<fieldDescription><![CDATA[Создатель договора]]></fieldDescription>
-	</field>
-	<field name="col_Executor_Family" class="java.lang.String">
-		<fieldDescription><![CDATA[Исполнитель.Фамилия]]></fieldDescription>
-	</field>
-	<field name="col_Executor_Name" class="java.lang.String">
-		<fieldDescription><![CDATA[Исполнитель.Имя]]></fieldDescription>
-	</field>
-	<field name="col_Executor_Otchestvo" class="java.lang.String">
-		<fieldDescription><![CDATA[Исполнитель.Отчество]]></fieldDescription>
-	</field>
-	<field name="col_Executor_Staff" class="java.lang.String">
-		<fieldDescription><![CDATA[Исполнитель.Должность]]></fieldDescription>
+	<field name="col_Executor" class="java.lang.String">
+		<fieldDescription><![CDATA[Исполнитель]]></fieldDescription>
 	</field>
 	<background>
 		<band splitType="Stretch"/>
@@ -280,9 +268,8 @@
 					<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					<paragraph lineSpacing="Single" spacingBefore="2" spacingAfter="2" tabStopWidth="20"/>
 				</textElement>
-				<textFieldExpression><![CDATA[($F{col_Executor_Family} == null ? "" : $F{col_Executor_Family})
-+ ( $F{col_Executor_Name} == null ? "" : " "+ ($F{col_Executor_Name}+ " ").substring( 0, 1 )+ ".")
-+ ( $F{col_Executor_Otchestvo} == null ? "" : ($F{col_Executor_Otchestvo}+ " ").substring(0,1) + ".")]]></textFieldExpression>
+				<textFieldExpression><![CDATA[($F{col_Executor} == null ? "" : $F{col_Executor})
+]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
 				<reportElement uuid="b8fc6c50-c272-4fda-86c8-c18a502c3205" x="690" y="0" width="107" height="20" isPrintWhenDetailOverflows="true"/>
