--- a/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/approval-discipline/approval-discipline.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/approval-discipline/approval-discipline.jrxml
@@ -37,14 +37,8 @@
 	<field name="col_Period.End" class="java.util.Date">
 		<fieldDescription><![CDATA[Конец периода]]></fieldDescription>
 	</field>
-	<field name="col_Employee.FirstName" class="java.lang.String">
+	<field name="col_Employee" class="java.lang.String">
 		<fieldDescription><![CDATA[Фамилия Сотрудника]]></fieldDescription>
-	</field>
-	<field name="col_Employee.MiddleName" class="java.lang.String">
-		<fieldDescription><![CDATA[Имя Сотрудника]]></fieldDescription>
-	</field>
-	<field name="col_Employee.LastName" class="java.lang.String">
-		<fieldDescription><![CDATA[Отчество Сотрудника]]></fieldDescription>
 	</field>
 	<field name="col_Employee.StaffPosition" class="java.lang.String">
 		<fieldDescription><![CDATA[Должность Сотрудника]]></fieldDescription>
@@ -190,7 +184,7 @@
 					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					<paragraph lineSpacing="AtLeast" leftIndent="2" rightIndent="2" spacingBefore="2" spacingAfter="2" tabStopWidth="30"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{col_Employee.LastName}+ " "+ ($F{col_Employee.FirstName}+ " ").substring( 0, 1 )+ "."+ ($F{col_Employee.MiddleName}+ " ").substring(0,1) + "."]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{col_Employee}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement uuid="5db5527c-1abb-4aad-a2d8-e699a7cede33" x="381" y="2" width="150" height="20" isRemoveLineWhenBlank="true"/>
