[~] Подправлена модель табличной структуры, добавлены доп. поля для поиска по ассоциациям [~] В контрол datagrid-association-control.ftl добавлен toolbar. [~] Подправлены стили
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5030 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/datagrid.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/datagrid.css
@@ -67,3 +67,7 @@
 .datagrid .expanded .expandRow a {
     background-image: url("/share/res/images/lecm-base/components/triangle_up.png");
 }
+
+.form-field.with-grid.grid-control{
+    clear: both;
+}
